[package]
name = "settleup"
version = "0.1.0"
edition = "2024"
description = "A small web app for splitting shared expenses — no accounts, join by link/QR, fewest-payment settle-up. Rust (axum + maud + htmx) + SQLite."
license = "GPL-3.0-only"
repository = "https://github.com/Stromdahl/settleup"
readme = "README.md"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
maud = { version = "0.27", features = ["axum"] }
axum-extra = { version = "0.10", features = ["cookie"] }
qrcode = "0.14"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
time = "0.3"
